Adapted the package requirements according to the new ml_logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,6 @@ google-cloud-bigquery
 google-cloud-storage
 notebook
 pathlib
-# time
 statsmodels
-tensorflow==2.18.0; sys_platform != 'darwin'
-geopandas
+tensorflow
 xgboost
